# federated-diffusion

./: .gitignore  README.md  arg-script.sh  grex-singularity-run-decentralized-aggregator.sh  local-run-decentralized-aggregator.sh  requirements.txt  singularity-run-decentralized-aggregator.sh  test-regex.sh
blocklearning/: aggregator.py  contract.py  scorer.py  trainer.py  vertical_aggregator.py  vertical_trainer.py
blocklearning/aggregators/: blockflow.py  fedavg_means.py  fedavg_medians.py  multikrum.py  utils.py
blocklearning/diffpriv/: gaussian.py
blocklearning/model_loaders/: __init__.py  ipfs.py
blocklearning/scorers/: accuracy.py  marginal_gain.py  (+1 more)
centralized-fl/: README.md  __init__.py  client_app.py  net.py  pyproject.toml  run-central-aggregator.sh  server_app.py  utils.py
centralized-fl/central_aggregator/: task.py
centralized-fl/central_aggregator/strategy/: get_strategy.py
centralized-fl/strategy/: get_strategy.py  save_strategy.py  save_unet.py
centralized-model/: README.md  train-centralized-model.sh  train_centralized_model.py
decentralized-fl/: README.md  build-images.sh  grex-singularity-run-decentralized-aggregator.sh  run-decentralized-fl.sh
inference/: README.md  inference.py  metrics-and-charts.py  train_classifier.py
singularity/: build_py_node_image.sh  eth_node.def  grex_eth_node.def  grex_py_node.def  py_node.def  run_client_instance.sh  run_eth_nodes.sh  run_miner_instance.sh  run_owner_instance.sh  run_py_nodes.sh  run_server_instance.sh
testbed/: out.txt  run_client.py  run_server.py  run_vertical_client.py  save_model.py  start_round.py  start_vertical_round.py  toolkit.py
(+53 files in other folders)
